nesc-frontend/src/test/resources/integration/programs/bad/bad31/M.nc
module M
{
   uses interface I<short>[unsigned char clientId];
}
implementation
{
   static short last;

   event void I.e[unsigned char clientId](short arg)
   {
      call I.c[clientId](last);
      last = arg;
   }
}
